<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/profile_usernameHint"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/profile_passwordHint"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_primary_button"
            android:minWidth="150dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/profile_save"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>